The types in JS

--- a/06_php/index.html
+++ b/06_php/index.html
@@ -11,5 +11,10 @@
         Entrez votre prenom : <input type="text" name="prenom"/><br/>
         <input type="submit" name="valider" value="OK"/>
     </form>
+	<FORM>
+	<?php 
+	$age=$_POST['prenom']; 
+	echo $age;
+	?>
 </body>
 </html>
