Methodes of type String

--- a/05_javascript/07_TypeJS.html
+++ b/05_javascript/07_TypeJS.html
@@ -10,7 +10,7 @@
 		var foo ="55";
 		var myNumber = Number(foo);
 		if ( ! isNaN(myNumber) ) {
-			console.log("It is a number")
+			console.log("It is a number");
 		}
 		
 		var x = 600.6;
@@ -20,7 +20,7 @@
 		var biggest = Math.max(a,b,c,d);
 		var smallest = Math.min(a,b,c);
 		
-		console.log(biggest, smallest)
+		console.log(biggest, smallest);
 	</script>
 </body>
 </html>
