Calculator Test Unitaire

--- a/07_tests/01_QUnit/test1.html
+++ b/07_tests/01_QUnit/test1.html
@@ -16,8 +16,8 @@
 					assert1.equal (1,1,"1 expected");
 					});
 		QUnit.test("Inégalité", 
-					function (assert1) { 	
-					assert1.notEqual (1,10,"1 expected");
+					function (assert) { 	
+					assert.notEqual (1,10,"1 expected");
 					});
 	</script>
 </body>
